# loongshot

./: .gitignore  README.md
ansible/: inventory.ini
ansible/playbooks/: builder.yml  control.yml  syncweb.yml  webserver.yml  wireguard.yml
build_status/: app.py  create_table.sql
build_status/html/: index.html
build_status/static/: styles.css
build_status/templates/: add.html  edit.html  index.html
docs/: build_process.md  getting_started.md  infrastructure.md  makenspawnpkg.md  packaging-lite.md
loong-status/: index.html  init.sql  log.html  new.html
loong-status/front/: eslint.config.js  index.html  package.json  vite.config.js
loong-status/isloongupdated/: .env.example  Cargo.toml
loong-status/isloongupdated/src/: log_handlers.rs  main.rs  package_handlers.rs  task_handlers.rs
loong-status/isloongupdated/src/api/: main.rs
loong-status/isloongupdated/src/updator/: main.rs
scripts/: 0build.sh  1build.sh  autobuild.py  buildbot.sh  buildpkg.sh  buildstag.sh  canrebuild  checkrepo.sh  checksoname.py  compare.py  compare86.py  createlinks  createpatch.sh  dbcmd.py  dbcmd.sh  dbinit.py  debug-clean.py  filterpkg.py  findpkg.py  findtodel.sh  genrebuild  github-issue-hook.py  init_table.sh  localup.sh  loong-build.sh  loong-repo-add  loong.sh  makenspawnpkg.sh  move-repo.sh  multibuild.sh  parselog.py  prepare-commit-msg  pyboot.lst  pyboot.sh  relist.py  sync-compare.sh  update86.py  workflow
web_server/: app.py  create_table.sql
web_server/html/: index.html  robots.txt
web_server/static/: styles.css  ui.js
web_server/templates/: fails.html  (+2 more)
(+51 files in other folders)
