[package]
name = "isloongupdated"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
dotenv = "0.15.0"
r2d2 = "0.8.10"
chrono = "0.4.38"
reqwest = { version = "0.12.7" }
serde = { version = "1.0.210", features = ["derive"]}
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "chrono"]}
tempfile = "3.12.0"
tokio = { version = "1.40.0", features = ["full"] }

[[bin]]
name = "loong-updator"
path = "src/updator/main.rs"

[[bin]]
name = "loong-api"
path = "src/api/main.rs"
